Added stop percent to config

--- a/examples/config.example.json
+++ b/examples/config.example.json
@@ -6,6 +6,7 @@
     "strategy": {
         "currency": "eth",
         "amount": 4,
-        "depth_orient": false
+        "depth_orient": false,
+        "stop_percent": 0.2
     }
 }
