--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,21 @@
 {
-	"name": "reilag/999dice",
-	"description": "999 Dice PHP Library",
-	"homepage": "https://www.999dice.com/",
-	"minimum-stability": "stable",
-	"license": "proprietary",
-	"authors": [
-		{
-			"name": "Tymchyk Maksym",
-			"email": "reilag69@gmail.com"
-		}
-	],
-	"autoload": {
-		"psr-4": {
-			"Three9Dice\\": "src/Three9Dice"
-		}
-	},
-	"require": {
-		"guzzlehttp/guzzle": "6.2.2"
-	}
+    "name": "reilag/999dice",
+    "description": "999 Dice PHP Library",
+    "homepage": "https://www.999dice.com/",
+    "minimum-stability": "stable",
+    "license": "proprietary",
+    "authors": [{
+        "name": "Tymchyk Maksym",
+        "email": "reilag69@gmail.com"
+    }],
+    "autoload": {
+        "psr-4": {
+            "Three9Dice\\": "src/Three9Dice"
+        }
+    },
+    "require": {
+        "guzzlehttp/guzzle": "6.2.2",
+        "symfony/console": "^3.1",
+        "symfony/process": "^3.2"
+    }
 }
