--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
     "require": {
         "guzzlehttp/guzzle": "6.2.2",
         "symfony/console": "^3.1",
-        "symfony/process": "^3.2"
+        "symfony/process": "^3.2",
+        "symfony/yaml": "^3.3",
+        "illuminate/support": "^5.4"
     }
 }
