Update Entropy model

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,9 +1,9 @@
 [group:php-999dice-bots]
-programs=php-martingale
+programs=php-999dice-martingale
 
 [program:php-999dice-martingale]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/bin/bot run:default --currency=doge --amount=100
+command=php /var/www/bin/bot run:default ./config
 autostart=true
 autorestart=true
 user=root
