--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     },
     "require": {
+        "php": ">7.0",
         "guzzlehttp/guzzle": "6.2.2",
         "symfony/console": "^3.1",
         "symfony/process": "^3.2",
