Changed my name 😎

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "MrCyjaneK/999dice",
+    "name": "cyjan/999dice",
     "description": "999 Dice PHP Library",
     "homepage": "https://www.999dice.com/",
     "minimum-stability": "stable",
