--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "cyjan/999dice",
     "description": "999 Dice PHP Library",
     "homepage": "https://www.999dice.com/",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "license": "proprietary",
     "authors": [{
         "name": "Tymchyk Maksym",
